--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.6"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "sapper": "^0.27.12",
-    "svelte": "^3.22.2",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.10.2",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/runtime": "^7.10.2",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
-    "rollup": "^2.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^2.16.1",
     "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-svelte": "^5.2.2",
+    "rollup-plugin-terser": "^5.3.0",
+    "sapper": "^0.27.16",
+    "svelte": "^3.23.2"
   }
 }
