--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "background_color": "#ffffff",
-  "theme_color": "#333333",
+  "theme_color": "#ff00ff",
   "name": "Plan Libre",
   "short_name": "PL",
   "display": "minimal-ui",
